src/objects/DRDW_Cap_Request__c.object
<CustomObject>
    <fields>
        <fullName>Samples_to_collect_new__c</fullName>
        <label>Study Schedule Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_IVP_Location__c</fullName>
        <label>Other IVP Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Study_End_Date__c</fullName>
        <label>Actual Study End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Study_Start_Date__c</fullName>
        <label>Actual Study Start Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_at_Initiation__c</fullName>
        <label>Age at Initiation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Challenge_Phase_No_of_treatment_gro__c</fullName>
        <label>Challenge Phase: No. of treatment groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Challenge_Material_Needed__c</fullName>
        <label>Date Challenge Material Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_IVP_Material_Needed__c</fullName>
        <label>Date IVP Material Needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dependants_Complete_TF__c</fullName>
        <formula>OR(        
        AND( ISPICKVAL( Study_Type__c , &apos;Other&apos;), ISBLANK(  Other_Study_Type__c  )),
        AND( ISPICKVAL(Reproductive_Status__c, &apos;Pregnant&apos;), ISBLANK(TEXT(how_many_months_pregnant__c))),
        AND( ISPICKVAL( Immunological_Status__c , &apos;Other&apos;), ISBLANK( Other_Immunological_Status__c )),
        AND( ISPICKVAL( Housing_Needs__c , &apos;Other&apos;), ISBLANK( Other_Housing_Needs__c )),
        AND( ISPICKVAL( Pre_Screening__c , &apos;Yes&apos;), ISBLANK( TEXT(Inhouse_External__c )  )),
        AND( ISPICKVAL( Pre_Screening__c , &apos;Yes&apos;), ISBLANK(   Pre_Screening_Description__c   )),      
        AND( ISPICKVAL(  Do_we_have_challenge_material__c  , &apos;Yes&apos;), ISBLANK( Lot_Number__c )),
        AND( ISPICKVAL(  Material_location__c  , &apos;Other&apos;), ISBLANK(  Other_Material_Location__c   )),
AND( ISPICKVAL(  IVP_Location__c  , &apos;Other&apos;), ISBLANK(  Other_IVP_Location__c   )),
 AND(INCLUDES(Lab_Testing_Required__c, &apos;Lab Challenge: Other&apos;),  ISBLANK( Other_Lab_Challenge__c ) ),
 AND(INCLUDES(Lab_Testing_Required__c, &apos;Lab Blood: Other&apos;),  ISBLANK(  Other_Lab_Blood__c  ) ),
 AND(INCLUDES(Lab_Testing_Required__c, &apos;Lab Fecal: Other&apos;),  ISBLANK(  Other_Lab_Fecal__c  ) ),
 AND(INCLUDES(Lab_Testing_Required__c, &apos;Lab Swabs: Other&apos;),  ISBLANK(  Other_Lab_Swabs__c  ) ),
 AND(INCLUDES(Lab_Testing_Required__c, &apos;Lab Vaccination: Other&apos;),  ISBLANK(  Other_Lab_Vaccination__c  )),
 AND(INCLUDES(Lab_Testing_Required__c, &apos;Lab Necropsy: Other&apos;),  ISBLANK(  Other_Lab_Necropsy__c  ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dependants Complete TF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_we_have_IVP_investigational_veterina__c</fullName>
        <label>Do we have IVP (investigational veterina</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_we_have_a_challenge_model_at_Iowa_Sit__c</fullName>
        <label>Do we have a challenge model at Iowa Sit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_we_have_challenge_material__c</fullName>
        <label>Do we have challenge material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_know_your_Activities__c</fullName>
        <label>Do you know your Activities?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Lab_Testing_Description__c</fullName>
        <label>External Lab Testing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lab_Testing_Location__c</fullName>
        <label>External Lab Testing Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lab_Testing_Needed__c</fullName>
        <label>External Lab Testing Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinalDateTobeConsidered__c</fullName>
        <label>FinalDateTobeConsidered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Signed_Protocol_Received__c</fullName>
        <label>Final Signed Protocol Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GO_Preferred_End_Date__c</fullName>
        <formula>IF(OR(ISBLANK(GO_Preferred_Start_Date__c),ISBLANK(Planned_Study_Start_Date__c),ISBLANK(Planned_Study_End_Date__c)),NULL,(GO_Preferred_Start_Date__c + (Planned_Study_End_Date__c - Planned_Study_Start_Date__c)))</formula>
        <label>GO Preferred End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GO_Preferred_Start_Date__c</fullName>
        <label>GO Preferred Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Housing_Needs__c</fullName>
        <label>Housing Needs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group housed</fullName>
                </value>
                <value>
                    <fullName>Individually housed</fullName>
                </value>
                <value>
                    <fullName>Group housed prior to challenge phase</fullName>
                </value>
                <value>
                    <fullName>Individuallly housed prior to challenge phase</fullName>
                </value>
                <value>
                    <fullName>No nose-to-nose contact</fullName>
                </value>
                <value>
                    <fullName>Group housed during challenge phase</fullName>
                </value>
                <value>
                    <fullName>Individually housed during challenge phase</fullName>
                </value>
                <value>
                    <fullName>BSL-2 housing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IACUC_Approval_Date__c</fullName>
        <label>IACUC Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IACUC_Submission_Date__c</fullName>
        <label>IACUC Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IVP_Location__c</fullName>
        <label>IVP Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
                <value>
                    <fullName>Fort Dodge</fullName>
                </value>
                <value>
                    <fullName>Cuxhaven</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immunological_Status__c</fullName>
        <label>Immunological Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>APD</fullName>
                </value>
                <value>
                    <fullName>SPF</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CDCD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inhouse_External__c</fullName>
        <label>Inhouse/External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inhouse</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Testing_Required__c</fullName>
        <label>Lab Testing Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lab Challenge Preparation</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination Preparation</fullName>
                </value>
                <value>
                    <fullName>Lab Blood Serum Neutralization</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge: Pre-Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge: Post-Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination: Pre-Vaccination Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination: Post-Vaccination Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: ELISA</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Western Blot</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Hematology</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Plasma Separation</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs: Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal: Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy: Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy: Isolation</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy: Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Protocol__c</fullName>
        <label>Link to Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_location__c</fullName>
        <label>Material location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenfield</fullName>
                </value>
                <value>
                    <fullName>Fort Dodge</fullName>
                </value>
                <value>
                    <fullName>Cuxhaven</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Animals_per_Treatment__c</fullName>
        <label>Number of Animals per Treatment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Treatment_groups__c</fullName>
        <label>Number of Treatment groups</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Housing_Needs__c</fullName>
        <label>Other Housing Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Immunological_Status__c</fullName>
        <label>Other Immunological Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Blood__c</fullName>
        <label>Other Lab Blood</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Challenge__c</fullName>
        <label>Other Lab Challenge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Fecal__c</fullName>
        <label>Other Lab Fecal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Necropsy__c</fullName>
        <label>Other Lab Necropsy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Swabs__c</fullName>
        <label>Other Lab Swabs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Testing_Required__c</fullName>
        <label>Other Lab Testing Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lab_Vaccination__c</fullName>
        <label>Other Lab Vaccination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Material_Location__c</fullName>
        <label>Other Material Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Samples__c</fullName>
        <label>Other Samples</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Study_Type__c</fullName>
        <label>Other Study Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vendor__c</fullName>
        <label>Other Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <description>Planned DTG date on the Project if an Evaluation Project, the Planned DTA date on the Project if a Generation Project, the Planned DP1 date on the Project if an Assessment Project.It is editable</description>
        <label>Planned End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <description>DTE date on the Project if an Evaluation Project, the DTG date on the Project if a Generation Project, the DTA date on the Project if an Assessment Project. It is editable</description>
        <label>Planned Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Study_End_Date__c</fullName>
        <label>Planned Study End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Study_Start_Date__c</fullName>
        <inlineHelpText>Study Day 0 Equals Frist Dosing</inlineHelpText>
        <label>Planned Study Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_Screening_Description__c</fullName>
        <label>Pre-Screening Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Screening__c</fullName>
        <label>Pre-Screening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Start_Date_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Start Date Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a backend field, currently used for adding as the recipient for Go type of records</description>
        <label>Project PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_RPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a backend field, currently used for adding as the recipient for Go type of records</description>
        <label>Project RPL</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related project</description>
        <label>Project</label>
        <referenceTo>DRDW_Project__c</referenceTo>
        <relationshipLabel>DRDW Requests</relationshipLabel>
        <relationshipName>DRDW_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Protocol_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protocol Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Rejection__c</fullName>
        <label>Reasons for Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Technically Feasible</fullName>
                </value>
                <value>
                    <fullName>Personnel Resource Constraints</fullName>
                </value>
                <value>
                    <fullName>Facility Resource Constraints</fullName>
                </value>
                <value>
                    <fullName>More Information Required</fullName>
                </value>
                <value>
                    <fullName>Misalignment on Start Date</fullName>
                </value>
                <value>
                    <fullName>Request - Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Comments__c</fullName>
        <label>Rejection Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project_Name__c</fullName>
        <formula>IF( Project__r.RecordType.Name = &apos;Idea Project&apos; , Project__r.Idea_Name__c , IF( Project__r.RecordType.Name = &apos;Generation Project&apos; , Project__r.Project_Name__c , Project__r.Project_Name__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Project_link__c</fullName>
        <formula>IF( Project__r.RecordType.Name = &apos;Idea Project&apos; , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;/apex/DRDW_CreateIdea?id=&quot;
&amp;Project__c&amp;&quot;&amp;isEdit=false&quot; , IF( Project__r.RecordType.Name = &apos;Generation Project&apos; , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;/apex/DRDW_CreateGeneration?id=&quot;
&amp;Project__c , LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;/apex/DRDW_CreateAssessment?id=&quot;
&amp;Project__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Project link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reproductive_Status__c</fullName>
        <label>Reproductive Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pregnant</fullName>
                </value>
                <value>
                    <fullName>Castrated</fullName>
                </value>
                <value>
                    <fullName>Spayed</fullName>
                </value>
                <value>
                    <fullName>Intact</fullName>
                </value>
                <value>
                    <fullName>Freemartin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
     <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>Re-Submit: Change Request</fullName>
                </value>
                <value>
                    <fullName>Re-Submit: Data Request</fullName>
                </value>
                <value>
                    <fullName>Approved-Locked</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Samples_to_Collect__c</fullName>
        <label>Samples to Collect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Serum (SST)</fullName>
                </value>
                <value>
                    <fullName>Plasma (EDTA)</fullName>
                </value>
                <value>
                    <fullName>Fecal Sample</fullName>
                </value>
                <value>
                    <fullName>Fecal Swabs</fullName>
                </value>
                <value>
                    <fullName>Nasal Swabs</fullName>
                </value>
                <value>
                    <fullName>Tracheal Swabs</fullName>
                </value>
                <value>
                    <fullName>Oral Swabs</fullName>
                </value>
                <value>
                    <fullName>Tissue Sample</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Reagents_Required__c</fullName>
        <label>Special Reagents Required?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Hamster</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Guinea Pig</fullName>
                </value>
                <value>
                    <fullName>Mice</fullName>
                </value>
                <value>
                    <fullName>Cattle</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Swine</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Unassigned&quot;</defaultValue>
        <description>Stores status of request.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Partially Assigned</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Approval_Date__c</fullName>
        <label>Study Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Study_End_Date_Difference__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Actual_Study_End_Date__c)), NOT(ISBLANK(Planned_Study_End_Date__c))),Actual_Study_End_Date__c - 
Planned_Study_End_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study End Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Study_Number__c</fullName>
        <label>Study Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Start_Date_Difference__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(Actual_Study_Start_Date__c)), NOT(ISBLANK(Planned_Study_Start_Date__c))),Actual_Study_Start_Date__c - 
Planned_Study_Start_Date__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Study Start Date Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Status__c</fullName>
        <label>Study Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pivotal</fullName>
                </value>
                <value>
                    <fullName>Non-Pivotal</fullName>
                </value>
                <value>
                    <fullName>GCP</fullName>
                </value>
                <value>
                    <fullName>Non-GCP</fullName>
                </value>
                <value>
                    <fullName>GLP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Title__c</fullName>
        <label>Study Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>